--- a/views/orders.ejs
+++ b/views/orders.ejs
@@ -122,7 +122,7 @@
       total=total+unitcost
     }
     //post to purchases -send customerid,total & get back purchaseid
-    fetch('https://ejs-views-practice.glitch.me/api/purchases', {
+    fetch('https://techmagic.glitch.me/api/purchases', {
         headers:{
           "content-type":"application/json",
         },
