🕵🛳 Checkpoint ./views/customers.ejs:10176435/27 ./views/employees.ejs:10176435/27 ./views/product-claims.ejs:10176435/54 ./routes/supportviews.js:10176435/363

--- a/views/customers.ejs
+++ b/views/customers.ejs
@@ -86,7 +86,7 @@
   }  
   
   function update(){ 
-    fetch('https://ejs-views-practice.glitch.me/api/customers/address', {
+    fetch('https://techmagic.glitch.me/api/customers/address', {
         headers:{
           "content-type":"application/json",
         },
