--- a/views/employees.ejs
+++ b/views/employees.ejs
@@ -131,7 +131,7 @@
   }//end function modal(element)
   
   function update(){ 
-    fetch('https://ejs-views-practice.glitch.me/api/employees/address', {
+    fetch('https://techmagic.glitch.me/api/employees/address', {
         headers:{
           "content-type":"application/json",
         },
