--- a/views/product-claims.ejs
+++ b/views/product-claims.ejs
@@ -81,7 +81,7 @@
 <script type=text/javascript>
 
 function closeClaim(id, prod){
-   fetch('https://ejs-views-practice.glitch.me/api/claims/update', {
+   fetch('https://techmagic.glitch.me/api/claims/update', {
         headers:{
           "content-type":"application/json",
         },
@@ -98,7 +98,7 @@ function closeClaim(id, prod){
   }
   
 function openClaim(id, prod){
-    fetch('https://ejs-views-practice.glitch.me/api/claims/update', {
+    fetch('https://techmagic.glitch.me/api/claims/update', {
         headers:{
           "content-type":"application/json",
         },
