🏇🚧 Checkpoint ./views/partials/vieworder.ejs:10176435/267 ./views/partials/claim-edit.ejs:10176435/2062

--- a/views/partials/vieworder.ejs
+++ b/views/partials/vieworder.ejs
@@ -93,8 +93,9 @@
   </tbody>
 </table>
 
-
-<button><a href="/orders">Return</a></button>
+<form>
+<button id = "homebtn" class= "btn btn-success responsive-width" formaction="/orders" formmethod="GET" type="submit">Return</button>
+</form>
   </body>
 
 <script type=text/javascript>
