--- a/views/partials/vieworder.ejs
+++ b/views/partials/vieworder.ejs
@@ -100,7 +100,7 @@
             </div>
           </div>
           <div class = "row mt-3">
-          <button id = "homebtn" class= "btn btn-success w-50 h-50 responsive-width"  onclick="update();">Submit Customer's Claim</button>
+          <button id = "homebtn" class= "btn btn-success responsive-width"  onclick="update();">Submit Customer's Claim</button>
              </div>
         </form>
       </div>
