🌠⛴ Checkpoint ./views/employees.ejs:10176435/46

--- a/views/employees.ejs
+++ b/views/employees.ejs
@@ -3,7 +3,7 @@
 <%- include("partials/header") %>
 
 <% if (locals.employees) { %> 
-<h1>
+<h1 id= "hometitle" class = "h1 text-center mt-5">
   Employees
 </h1>
   Goals for this page: sort employees ✓, view employee information with modal✓, edit employee information, create employee ✓
