✈️🛳 Checkpoint ./views/partials/vieworder.ejs:10176435/9

--- a/views/partials/vieworder.ejs
+++ b/views/partials/vieworder.ejs
@@ -7,10 +7,10 @@
 
 <h1 id= "hometitle" class = "h1 text-center mt-5">Order</h1>
   <h3>
-    Customer: <%=response.firstname%> <%=response.lastname%>
+    Customer: <%=response[0].firstname%> <%=response[0].lastname%>
   </h3>
   <h3>
-    <b>Total Cost: </b><%=response.totalcost%>
+    <b>Total Cost: </b><%=response[0].totalcost%>
   </h3>
   <h3>
     <b>Date: </b><%=datePurchase%> 
