✈️🐗 Checkpoint ./views/partials/claim-edit.ejs:10176435/3155 ./views/partials/vieworder.ejs:10176435/15

--- a/views/partials/vieworder.ejs
+++ b/views/partials/vieworder.ejs
@@ -7,7 +7,7 @@
 
 <h1 id= "hometitle" class = "h1 text-center mt-5">Order</h1>
   <h3>
-    Customer: <%=response[0].firstname%> <%=response[0].lastname%>
+    <b>Customer:</b> <%=response[0].firstname%> <%=response[0].lastname%>
   </h3>
   <h3>
     <b>Total Cost: </b><%=response[0].totalcost%>
