--- a/views/partials/claim-edit.ejs
+++ b/views/partials/claim-edit.ejs
@@ -91,41 +91,6 @@
           </div>
         </div>
         
-        
-        
-        <% if (locals.comments.length >0 ) { %>  
-        <div classe = "mt-5">
-         <b>Comments: </b>
-          <table class="table table-striped table-bordered">
-            <thead>
-              <tr>
-                <th>Comment</th>
-                <th>Commenter</th>
-              </tr>
-            </thead>
-            <tbody>
-            <% comments.forEach(comment=>{ %>
-              <tr>
-                <td><%=comment.description%></td>
-                <td>
-                  <% if (locals.employees){%>
-                  <% if (locals.comments){%>
-                  <% if (comment.employeeid>0){%>
-                    <%=employees[comment.employeeid-1].firstname%> 
-                    <%=employees[comment.employeeid-1].lastname%>
-                  <%}else{%>
-                    <%=employees[0].firstname%> 
-                    <%=employees[0].lastname%>
-                  <%}%>
-                  <%}%>
-                  <%}%>
-                </td>
-              </tr>
-            <%})%>
-            </tbody>
-          </table>
-        </div>
-        <%}%>
         <% if (locals.resolutions) { %>  
         
         <div class = "row mt-3">
@@ -166,6 +131,41 @@
              <%=dateClosed%>
           </div>
         </div>
+        
+        <% if (locals.comments.length >0 ) { %>  
+        <div class = "mt-3">
+         <b>Comments: </b>
+          <table class="table table-striped table-bordered">
+            <thead>
+              <tr>
+                <th>Comment</th>
+                <th>Commenter</th>
+              </tr>
+            </thead>
+            <tbody>
+            <% comments.forEach(comment=>{ %>
+              <tr>
+                <td><%=comment.description%></td>
+                <td>
+                  <% if (locals.employees){%>
+                  <% if (locals.comments){%>
+                  <% if (comment.employeeid>0){%>
+                    <%=employees[comment.employeeid-1].firstname%> 
+                    <%=employees[comment.employeeid-1].lastname%>
+                  <%}else{%>
+                    <%=employees[0].firstname%> 
+                    <%=employees[0].lastname%>
+                  <%}%>
+                  <%}%>
+                  <%}%>
+                </td>
+              </tr>
+            <%})%>
+            </tbody>
+          </table>
+        </div>
+        <%}%>
+        
         
         <div class = "row mt-3">
         <input id = "homebtn" class= "btn btn-success responsive-width"  type="submit">
