--- a/views/employees.ejs
+++ b/views/employees.ejs
@@ -145,7 +145,7 @@
           firstname:document.getElementById("firstname").value,
           lastname:document.getElementById("lastname").value,
           phone:document.getElementById("phone").value,
-          title:document.getElementById("phone").value
+          title:document.getElementById("title").value
         }),
             method: 'POST'
         }).then(resp=>{
