⚓️🙋 Checkpoint ./views/customers.ejs:10176435/25 ./views/employees.ejs:10176435/15 ./views/orders.ejs:10176435/5

--- a/views/customers.ejs
+++ b/views/customers.ejs
@@ -76,6 +76,7 @@
     //close out of modal either when clicking 'x' 
     closeBtn.onclick = function() {
       modal.style.display = "none";
+      location=location;
     }
     //or close modal when clicking outside of the modal
     window.onclick = function(event) {
