--- a/views/orders.ejs
+++ b/views/orders.ejs
@@ -13,7 +13,7 @@
 
 <button id = "homebtn" class = "btn btn-success h-50 responsive-width" onclick="orderModal()">Create Order</button>
 
-<table id="table" class="table table-hover">
+<table id="table" class="table table-hover mt-3">
   <thead>
     <tr>
       <th></th>
