--- a/views/employees.ejs
+++ b/views/employees.ejs
@@ -23,7 +23,7 @@
 
 <button id = "homebtn"  class="btn btn-success w-25 mt-3"   onclick="employeeModal()">Create New Employee</button>
 
-<table class="table table-hover">
+<table class="table table-hover mt-3">
   <thead>
     <tr>
       <th>Name</th>
@@ -46,18 +46,104 @@
   <div class="modal-content">
     <span class="close">&times;</span><!-- close button -->
     <div class="d-flex justify-content-center flex-column">
-      <form id="updateform">  
-        <div><b>First Name: </b><input value="" id="firstname" type="text" > </div>
-        <div><b>Last Name: </b><input value="" id="lastname" type="text" > </div>
-        <div><b>Title: </b><input placeholder="Support or Admin" value="" id="title" type="text" > </div>
-        <div><b>Email: </b><input value="" id="email"  type="text" > </div>
-        <div><b>Phone Number: </b><input value="" id="phone" type="text" > </div>
-        <div><b>Street Address: </b><input value="" id="address1" type="text" > </div>
-        <div><b>Street Address 2: </b><input value="" id="address2" type="text" > </div>
-        <div><b>City : </b><input value="" id="city"  type="text" > </div>
-        <div><b>State(Abr): </b><input value="" id="state" type="text" > </div>
-        <div><b>Zip: </b><input value="" id="zip"  type="text" > </div>
-        <button onclick="update();">Submit New Employee</button>
+      <form id="updateform"> 
+        
+        <div class = "row mt-3">
+          <div class = col-sm-4>
+            <b>First Name: </b>
+          </div>
+          <div class = col-sm-4>
+          <input value="" id="firstname" type="text" > 
+          </div>
+        </div>
+        
+        <div class = "row mt-3">
+          <div class = col-sm-4>
+            <b>Last Name: </b>
+          </div>
+          <div class = col-sm-4>
+          <input value="" id="lastname" type="text" > 
+          </div>
+        </div>
+        
+        <div class = "row mt-3">
+          <div class = col-sm-4>
+            <b>Title: </b>
+          </div>
+          <div class = col-sm-4>
+          <input placeholder="Support or Admin" value="" id="title" type="text" > 
+          </div>
+        </div>
+        
+        <div class = "row mt-3">
+          <div class = col-sm-4>
+            <b>Email: </b>
+          </div>
+          <div class = col-sm-4>
+          <input value="" id="email"  type="text" > 
+          </div>
+        </div>
+        
+        <div class = "row mt-3">
+          <div class = col-sm-4>
+            <b>Phone Number: </b>
+          </div>
+          <div class = col-sm-4>
+          <input value="" id="phone" type="text" > 
+          </div>
+        </div>
+        
+        <div class = "row mt-3">
+          <div class = col-sm-4>
+            <b>Street Address: </b>
+          </div>
+          <div class = col-sm-4>
+            <input value="" id="address1" type="text" > 
+          </div>
+        </div>
+        
+        <div class = "row mt-3">
+          <div class = col-sm-4>
+            <b>Street Address 2: </b>
+          </div>
+          <div class = col-sm-4>
+            <input value="" id="address2" type="text" >
+          </div>
+        </div>
+        
+         <div class = "row mt-3">
+          <div class = col-sm-4>
+            <b>City : </b>
+          </div>
+          <div class = col-sm-4>
+            <input value="" id="city"  type="text" >
+          </div>
+        </div>
+        
+        <div class = "row mt-3">
+          <div class = col-sm-4>
+            <b>State(Abr): </b>
+          </div>
+          <div class = col-sm-4>
+            <input value="" id="state" type="text" > 
+          </div>
+        </div>
+        
+         <div class = "row mt-3">
+          <div class = col-sm-4>
+            <b>Zip: </b>
+          </div>
+          <div class = col-sm-4>
+            <input value="" id="zip"  type="text" >
+          </div>
+        </div>
+        
+        <div class = "row mt-3">
+          <div class = col-sm-4>
+        <button id = "homebtn" class = "btn btn-success responsive-width"  onclick="update();">Submit New Employee</button>
+          </div>
+        </div>
+        
       </form>
     </div>
   </div>
