--- a/views/customers.ejs
+++ b/views/customers.ejs
@@ -24,7 +24,7 @@
      </ul>
   </div>
 
-<button id = "homebtn" class= "btn btn-success w-50 h-50 responsive-width"   onclick="newCustModal()">Create New Customer</button>
+<button id = "homebtn" class= "btn btn-success responsive-width mt-3"   onclick="newCustModal()">Create New Customer</button>
 
 <table class="table table-hover mt-3">
   <thead>
