--- a/views/supportclaims.ejs
+++ b/views/supportclaims.ejs
@@ -17,7 +17,7 @@
 </head>
 
 <body id="home" class="container">
-    <h1 id= "hometitle" class = "h1 text-center">Claims for <%= title %> <%= id %></h1>
+    <h1 id= "hometitle" class = "h1 text-center mt-5">Claims for <%= title %> <%= id %></h1>
     
   <div class = "row">
     <div class = "col-sm-6">
