🤖🍔 Checkpoint ./views/customers.ejs:10176435/125 ./views/products.ejs:10176435/444 ./static/style.css:10176435/109 ./views/product-claims.ejs:10176435/387

--- a/static/style.css
+++ b/static/style.css
@@ -99,3 +99,10 @@ li{
   color: white;
   font-size: 1rem;
 }
+
+#claims{
+  background-color: #006a4e;
+  border: #006a4e;
+  color: white;
+  font-size: 1rem;
+}
