--- a/views/customers.ejs
+++ b/views/customers.ejs
@@ -24,7 +24,7 @@
      </ul>
   </div>
 
-<button id = "homebtn" class= "btn btn-success responsive-width mt-3"   onclick="newCustModal()">Create New Customer</button>
+<button id = "homebtn"  class="btn btn-success w-25 mt-3" onclick="newCustModal()">Create New Customer</button>
 
 <table class="table table-hover mt-3">
   <thead>
@@ -138,7 +138,6 @@
         <button id = "homebtn" class = "btn btn-success responsive-width"  onclick="update();">Submit New Customer</button>
           </div>
         </div>
-        
       
       </form>
     </div>
